// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movies PATCH/movies -> should update a movie in a database and index 1`] = `
Object {
  "__v": 0,
  "_deleted": false,
  "_id": Any<String>,
  "_indexed": true,
  "actor_facets": Array [
    "https://image.tmdb.org/t/p/w45/e2u2Vyy66j2rUL8fyjjHWlYtWLH.jpg|Marlon Brando",
    "https://image.tmdb.org/t/p/w45/lk0nt14sH96SYHDkX7qsLlpqRjJ.jpg|Al Pacino",
    "https://image.tmdb.org/t/p/w45/g4bxNXWft1jLZX8gKk4G6ypkTUf.jpg|James Caan",
    "https://image.tmdb.org/t/p/w45/uBNqpxmlNSX7FJeubO1g3nlrrkF.jpg|Richard S. Castellano",
    "https://image.tmdb.org/t/p/w45/1aBC7NxPy10ofng6HsJBecJ1vMZ.jpg|Robert Duvall",
    "https://image.tmdb.org/t/p/w45/aE85Dzwaf5rTbjLnMgOtpw47BSY.jpg|Sterling Hayden",
    "https://image.tmdb.org/t/p/w45/ecteroI3S9feBlkxm33HJbPotHt.jpg|John Marley",
    "https://image.tmdb.org/t/p/w45/5682H8oxwIezxImi7HiFnBYLL4V.jpg|Richard Conte",
    "https://image.tmdb.org/t/p/w45/uTzNiDToGv513rvxQMx37mz0q9V.jpg|Al Lettieri",
    "https://image.tmdb.org/t/p/w45/fzgUMnbOkxC6E3EFcYHWHFaiKyp.jpg|Diane Keaton",
    "https://image.tmdb.org/t/p/w45/pUgFgNhow9niMPfTvj3mOzwtfRk.jpg|Abe Vigoda",
    "https://image.tmdb.org/t/p/w45/d2uI8tGSdpmXMh96C238J2A30RA.jpg|Talia Shire",
    "https://image.tmdb.org/t/p/w45/ttNwx2hFyQ7RkhAFhcfXtOYr6md.jpg|Gianni Russo",
    "https://image.tmdb.org/t/p/w45/weAjoU12KcVhIePI8YwxKkO4vbX.jpg|John Cazale",
    "https://image.tmdb.org/t/p/w45/wNpO0orqR8rWz7tf11iKN0UhvGg.jpg|Rudy Bond",
    "https://image.tmdb.org/t/p/w45/4rdC1Ezms99xSDrQnqHZDDpdZiW.jpg|Al Martino",
    "https://image.tmdb.org/t/p/w45/k9PLB28bm1oylZGAyzkWbIrZioM.jpg|Morgana King",
    "https://image.tmdb.org/t/p/w45/6rCsufBnJAj57mJ7PVaAFpIzm3j.jpg|Lenny Montana",
    "https://image.tmdb.org/t/p/w45/pq72Duoc6F6fP5rlVYE2nTU9mFH.jpg|John Martino",
    "https://image.tmdb.org/t/p/w45/grnzoe9ElGN0qgcFZDQjMN0w6oq.jpg|Salvatore Corsitto",
    "https://image.tmdb.org/t/p/w45/lISkRNmrR2P8OXvgPBZc7QmkLWA.jpg|Alex Rocco",
    "https://image.tmdb.org/t/p/w45/oqR33f9gT5ODA8U8h2y05myM7dj.jpg|Tony Giorgio",
    "https://image.tmdb.org/t/p/w45/g4syFwXi60P1ID3aLTyxup4EXbT.jpg|Victor Rendina",
    "https://image.tmdb.org/t/p/w45/oNH6iH1IkMvWJevQRtnVnXygd8b.jpg|Simonetta Stefanelli",
    "https://image.tmdb.org/t/p/w45/JjUgH6kyEyZ4kgfusXENCkhlk8.jpg|Saro Urzì",
    "https://image.tmdb.org/t/p/w45/zG1WS4sS5jvYkObHMxsK6fGK7Uk.jpg|Sofia Coppola",
    "https://image.tmdb.org/t/p/w45/ndDIYrXz2catGlP01JUwuHi2nFU.jpg|Louis Guss",
    "https://image.tmdb.org/t/p/w45/sDwZ0sbq1AHGZGuUr9IlumiVzgf.jpg|Gabriele Torrei",
  ],
  "actors": Array [
    "Marlon Brando",
    "Al Pacino",
    "James Caan",
    "Richard S. Castellano",
    "Robert Duvall",
    "Sterling Hayden",
    "John Marley",
    "Richard Conte",
    "Al Lettieri",
    "Diane Keaton",
    "Abe Vigoda",
    "Talia Shire",
    "Gianni Russo",
    "John Cazale",
    "Rudy Bond",
    "Al Martino",
    "Morgana King",
    "Lenny Montana",
    "John Martino",
    "Salvatore Corsitto",
    "Alex Rocco",
    "Tony Giorgio",
    "Victor Rendina",
    "Simonetta Stefanelli",
    "Saro Urzì",
    "Sofia Coppola",
    "Louis Guss",
    "Gabriele Torrei",
  ],
  "alternative_titles": Array [
    "The Godfather Part I",
    "El Padrino I",
    "The Godfather Part 1",
    "Mario Puzo's The Godfather",
    "The Godfather: The Coppola Restoration",
    "Ojciec Chrzestny",
    "Der Pate",
    "教父",
    "Der Pate Vol 1",
    "Крестный отец 1",
    "Der Pate Teil I",
    "The Godfather: Part I",
    "Le Parrain 1",
    "O Poderoso Chefão",
    "The Godfather 1",
    "Il Padrino - Parte I",
    "대부",
    "O Padrinho",
    "Godfather, The",
  ],
  "color": "#938071",
  "createdAt": Any<Date>,
  "genre": Array [
    "Drama",
    "Crime",
  ],
  "image": "https://image.tmdb.org/t/p/w154/d4KNaTrltq6bpkFS01pYtyXa09m.jpg",
  "objectID": Any<String>,
  "rating": 5,
  "score": 9.964740368509213,
  "title": "The Godfather 2",
  "updatedAt": Any<Date>,
  "year": 1988,
}
`;

exports[`Movies PATCH/movies -> should update a movie in a database and index 2`] = `
Object {
  "_highlightResult": Any<Object>,
  "_id": Any<String>,
  "actor_facets": Array [
    "https://image.tmdb.org/t/p/w45/e2u2Vyy66j2rUL8fyjjHWlYtWLH.jpg|Marlon Brando",
    "https://image.tmdb.org/t/p/w45/lk0nt14sH96SYHDkX7qsLlpqRjJ.jpg|Al Pacino",
    "https://image.tmdb.org/t/p/w45/g4bxNXWft1jLZX8gKk4G6ypkTUf.jpg|James Caan",
    "https://image.tmdb.org/t/p/w45/uBNqpxmlNSX7FJeubO1g3nlrrkF.jpg|Richard S. Castellano",
    "https://image.tmdb.org/t/p/w45/1aBC7NxPy10ofng6HsJBecJ1vMZ.jpg|Robert Duvall",
    "https://image.tmdb.org/t/p/w45/aE85Dzwaf5rTbjLnMgOtpw47BSY.jpg|Sterling Hayden",
    "https://image.tmdb.org/t/p/w45/ecteroI3S9feBlkxm33HJbPotHt.jpg|John Marley",
    "https://image.tmdb.org/t/p/w45/5682H8oxwIezxImi7HiFnBYLL4V.jpg|Richard Conte",
    "https://image.tmdb.org/t/p/w45/uTzNiDToGv513rvxQMx37mz0q9V.jpg|Al Lettieri",
    "https://image.tmdb.org/t/p/w45/fzgUMnbOkxC6E3EFcYHWHFaiKyp.jpg|Diane Keaton",
    "https://image.tmdb.org/t/p/w45/pUgFgNhow9niMPfTvj3mOzwtfRk.jpg|Abe Vigoda",
    "https://image.tmdb.org/t/p/w45/d2uI8tGSdpmXMh96C238J2A30RA.jpg|Talia Shire",
    "https://image.tmdb.org/t/p/w45/ttNwx2hFyQ7RkhAFhcfXtOYr6md.jpg|Gianni Russo",
    "https://image.tmdb.org/t/p/w45/weAjoU12KcVhIePI8YwxKkO4vbX.jpg|John Cazale",
    "https://image.tmdb.org/t/p/w45/wNpO0orqR8rWz7tf11iKN0UhvGg.jpg|Rudy Bond",
    "https://image.tmdb.org/t/p/w45/4rdC1Ezms99xSDrQnqHZDDpdZiW.jpg|Al Martino",
    "https://image.tmdb.org/t/p/w45/k9PLB28bm1oylZGAyzkWbIrZioM.jpg|Morgana King",
    "https://image.tmdb.org/t/p/w45/6rCsufBnJAj57mJ7PVaAFpIzm3j.jpg|Lenny Montana",
    "https://image.tmdb.org/t/p/w45/pq72Duoc6F6fP5rlVYE2nTU9mFH.jpg|John Martino",
    "https://image.tmdb.org/t/p/w45/grnzoe9ElGN0qgcFZDQjMN0w6oq.jpg|Salvatore Corsitto",
    "https://image.tmdb.org/t/p/w45/lISkRNmrR2P8OXvgPBZc7QmkLWA.jpg|Alex Rocco",
    "https://image.tmdb.org/t/p/w45/oqR33f9gT5ODA8U8h2y05myM7dj.jpg|Tony Giorgio",
    "https://image.tmdb.org/t/p/w45/g4syFwXi60P1ID3aLTyxup4EXbT.jpg|Victor Rendina",
    "https://image.tmdb.org/t/p/w45/oNH6iH1IkMvWJevQRtnVnXygd8b.jpg|Simonetta Stefanelli",
    "https://image.tmdb.org/t/p/w45/JjUgH6kyEyZ4kgfusXENCkhlk8.jpg|Saro Urzì",
    "https://image.tmdb.org/t/p/w45/zG1WS4sS5jvYkObHMxsK6fGK7Uk.jpg|Sofia Coppola",
    "https://image.tmdb.org/t/p/w45/ndDIYrXz2catGlP01JUwuHi2nFU.jpg|Louis Guss",
    "https://image.tmdb.org/t/p/w45/sDwZ0sbq1AHGZGuUr9IlumiVzgf.jpg|Gabriele Torrei",
  ],
  "actors": Array [
    "Marlon Brando",
    "Al Pacino",
    "James Caan",
    "Richard S. Castellano",
    "Robert Duvall",
    "Sterling Hayden",
    "John Marley",
    "Richard Conte",
    "Al Lettieri",
    "Diane Keaton",
    "Abe Vigoda",
    "Talia Shire",
    "Gianni Russo",
    "John Cazale",
    "Rudy Bond",
    "Al Martino",
    "Morgana King",
    "Lenny Montana",
    "John Martino",
    "Salvatore Corsitto",
    "Alex Rocco",
    "Tony Giorgio",
    "Victor Rendina",
    "Simonetta Stefanelli",
    "Saro Urzì",
    "Sofia Coppola",
    "Louis Guss",
    "Gabriele Torrei",
  ],
  "alternative_titles": Array [
    "The Godfather Part I",
    "El Padrino I",
    "The Godfather Part 1",
    "Mario Puzo's The Godfather",
    "The Godfather: The Coppola Restoration",
    "Ojciec Chrzestny",
    "Der Pate",
    "教父",
    "Der Pate Vol 1",
    "Крестный отец 1",
    "Der Pate Teil I",
    "The Godfather: Part I",
    "Le Parrain 1",
    "O Poderoso Chefão",
    "The Godfather 1",
    "Il Padrino - Parte I",
    "대부",
    "O Padrinho",
    "Godfather, The",
  ],
  "color": "#938071",
  "createdAt": Any<String>,
  "genre": Array [
    "Drama",
    "Crime",
  ],
  "image": "https://image.tmdb.org/t/p/w154/d4KNaTrltq6bpkFS01pYtyXa09m.jpg",
  "objectID": Any<String>,
  "rating": 5,
  "score": 9.964740368509213,
  "title": "The Godfather 2",
  "updatedAt": Any<String>,
  "year": 1988,
}
`;

exports[`Movies PATCH/movies -> updating a movie with an incorrect body should give validation errors 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    "title must be a string",
    "title must be longer than or equal to 2 characters",
    "title must be shorter than or equal to 500 characters",
    "movie year cannot be in the future",
    "movie year cannot be lower than 1900",
    "year must be an integer number",
    "year must be a positive number",
  ],
  "statusCode": 400,
}
`;

exports[`Movies POST/movies -> posting with incorrect body should give validation errors 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    "title must be a string",
    "title must be longer than or equal to 2 characters",
    "title must be shorter than or equal to 500 characters",
    "alternative_titles must be an array",
    "each value in alternative_titles must be a string",
    "each value in alternative_titles must be longer than or equal to 2 characters",
    "each value in alternative_titles must be shorter than or equal to 500 characters",
    "movie year cannot be in the future",
    "movie year cannot be lower than 1900",
    "year must be an integer number",
    "year must be a positive number",
    "image must be a string",
    "image must be an URL address",
    "image must be longer than or equal to 10 characters",
    "image must be shorter than or equal to 1000 characters",
    "color must be a hexadecimal color",
    "score must not be less than 1",
    "score must not be greater than 10",
    "score must be a positive number",
    "rating must not be less than 1",
    "rating must not be greater than 5",
    "rating must be an integer number",
    "rating must be a positive number",
    "actors must be an array",
    "each value in actors must be a string",
    "each value in actors must be longer than or equal to 2 characters",
    "each value in actors must be shorter than or equal to 100 characters",
    "actor_facets must be an array",
    "each value in actor_facets must be a string",
    "each value in actor_facets must be longer than or equal to 2 characters",
    "each value in actor_facets must be shorter than or equal to 1000 characters",
    "genre must be an array",
    "each value in genre must be a string",
    "genre must be alphanumeric",
    "each value in genre must be longer than or equal to 2 characters",
    "each value in genre must be shorter than or equal to 50 characters",
  ],
  "statusCode": 400,
}
`;

exports[`Movies POST/movies -> posting with incorrect body should give validation errors 2`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    "title must be a string",
    "title must be longer than or equal to 2 characters",
    "title must be shorter than or equal to 500 characters",
    "movie year cannot be in the future",
    "movie year cannot be lower than 1900",
    "year must be an integer number",
    "year must be a positive number",
  ],
  "statusCode": 400,
}
`;

exports[`Movies POST/movies -> should save a movie in a database and index 1`] = `
Object {
  "__v": 0,
  "_deleted": false,
  "_id": Any<String>,
  "_indexed": true,
  "actor_facets": Array [
    "https://image.tmdb.org/t/p/w45/tuZCyZVVbHcpvtCgriSp5RRPwMX.jpg|Tim Robbins",
    "https://image.tmdb.org/t/p/w45/oGJQhOpT8S1M56tvSsbEBePV5O1.jpg|Morgan Freeman",
    "https://image.tmdb.org/t/p/w45/b3NfI0IzPYI40eIEtO9O0XQiR8j.jpg|Bob Gunton",
    "https://image.tmdb.org/t/p/w45/deRJUFbO8uqPSQT3B6Vgp4jiJir.jpg|William Sadler",
    "https://image.tmdb.org/t/p/w45/pwiG1ljLoqfcmFH2zFp5NP2ML4B.jpg|Clancy Brown",
    "https://image.tmdb.org/t/p/w45/f5An5NqejnTEflFmW7Vp18zVOvJ.jpg|Gil Bellows",
    "https://image.tmdb.org/t/p/w45/bsh3cqDNwVvux4NdaY1Bj4S7mNS.jpg|Mark Rolston",
    "https://image.tmdb.org/t/p/w45/r1xOgXFjqhn2fonn78rlXKPZGFw.jpg|James Whitmore",
    "https://image.tmdb.org/t/p/w45/wMRlF3VRApPduQBAuNEVM4ncYcN.jpg|Jeffrey DeMunn",
    "https://image.tmdb.org/t/p/w45/3TGsmGFwJps4dmVncOZIO3p6ToO.jpg|Larry Brandenburg",
    "https://image.tmdb.org/t/p/w45/ujBzP61tYlwqWpB3oOxknl1XuEg.jpg|David Proval",
    "https://image.tmdb.org/t/p/w45/6nuAG4DVlCc0h2rfrbpJhdmKudx.jpg|Jude Ciccolella",
  ],
  "actors": Array [
    "Tim Robbins",
    "Morgan Freeman",
    "Bob Gunton",
    "William Sadler",
    "Clancy Brown",
    "Gil Bellows",
    "Mark Rolston",
    "James Whitmore",
    "Jeffrey DeMunn",
    "Larry Brandenburg",
    "David Proval",
    "Jude Ciccolella",
  ],
  "alternative_titles": Array [
    "En verden udenfor",
    "Cadena Perpetua",
    "A remény rabjai",
    "Um Sonho de Liberdade",
    "Les évadés",
    "Rita Hayworth - Avain pakoon",
    "Rita Hayworth - nyckel till flykten",
    "À l'ombre de Shawshank",
    "Vykoupení z věznice Shawshank",
    "Vykúpenie z väznice Shawshank",
    "Nyckeln Till Frihet",
    "Esaretin bedeli",
    "Frihetens Regn",
    "Os Condenados de Shawshank",
    "肖申克的救赎",
    "Sueños de libertad",
    "Die Verurteilten",
    "Изкуплението Шоушенк",
    "Sueños de fuga",
    "Xiao shen ke de jiu shu",
    "Shawshanki lunastus",
    "Gaqceva shoushenkidan",
    "Τελευταία Έξοδος Ρίτα Χέϊγουόρθ",
    "Iskupljenje u Shawshanku",
    "Homot Shel Tikva",
    "Rastgari Dar Shawshank",
    "Shôshanku no sora ni",
    "Pabegimas is Sousenko",
    "Sueños de libertad",
    "De ontsnapping",
    "Frihetens regn",
    "Sueños de fuga",
    "Skazani na Shawshank",
    "Inchisoarea Ingerilor",
    "Побег из Шоушенка",
    "Nyckeln till frihet",
    "Kaznilnica odresitve",
    "Esaretin Bedeli",
    "Втеча з Шоушенка",
    "쇼생크 탈출",
    "The Shawshank Redemption - Stephen King",
  ],
  "color": "#8C634B",
  "createdAt": Any<Date>,
  "genre": Array [
    "Drama",
    "Crime",
  ],
  "image": "https://image.tmdb.org/t/p/w154/9O7gLzmreU0nGkIB6K3BsJbzvNv.jpg",
  "objectID": Any<String>,
  "rating": 5,
  "score": 9.97764206054169,
  "title": "The Shawshank Redemption",
  "updatedAt": Any<Date>,
  "year": 1994,
}
`;

exports[`Movies POST/movies -> should save a movie in a database and index 2`] = `
Object {
  "_highlightResult": Any<Object>,
  "_id": Any<String>,
  "actor_facets": Array [
    "https://image.tmdb.org/t/p/w45/tuZCyZVVbHcpvtCgriSp5RRPwMX.jpg|Tim Robbins",
    "https://image.tmdb.org/t/p/w45/oGJQhOpT8S1M56tvSsbEBePV5O1.jpg|Morgan Freeman",
    "https://image.tmdb.org/t/p/w45/b3NfI0IzPYI40eIEtO9O0XQiR8j.jpg|Bob Gunton",
    "https://image.tmdb.org/t/p/w45/deRJUFbO8uqPSQT3B6Vgp4jiJir.jpg|William Sadler",
    "https://image.tmdb.org/t/p/w45/pwiG1ljLoqfcmFH2zFp5NP2ML4B.jpg|Clancy Brown",
    "https://image.tmdb.org/t/p/w45/f5An5NqejnTEflFmW7Vp18zVOvJ.jpg|Gil Bellows",
    "https://image.tmdb.org/t/p/w45/bsh3cqDNwVvux4NdaY1Bj4S7mNS.jpg|Mark Rolston",
    "https://image.tmdb.org/t/p/w45/r1xOgXFjqhn2fonn78rlXKPZGFw.jpg|James Whitmore",
    "https://image.tmdb.org/t/p/w45/wMRlF3VRApPduQBAuNEVM4ncYcN.jpg|Jeffrey DeMunn",
    "https://image.tmdb.org/t/p/w45/3TGsmGFwJps4dmVncOZIO3p6ToO.jpg|Larry Brandenburg",
    "https://image.tmdb.org/t/p/w45/ujBzP61tYlwqWpB3oOxknl1XuEg.jpg|David Proval",
    "https://image.tmdb.org/t/p/w45/6nuAG4DVlCc0h2rfrbpJhdmKudx.jpg|Jude Ciccolella",
  ],
  "actors": Array [
    "Tim Robbins",
    "Morgan Freeman",
    "Bob Gunton",
    "William Sadler",
    "Clancy Brown",
    "Gil Bellows",
    "Mark Rolston",
    "James Whitmore",
    "Jeffrey DeMunn",
    "Larry Brandenburg",
    "David Proval",
    "Jude Ciccolella",
  ],
  "alternative_titles": Array [
    "En verden udenfor",
    "Cadena Perpetua",
    "A remény rabjai",
    "Um Sonho de Liberdade",
    "Les évadés",
    "Rita Hayworth - Avain pakoon",
    "Rita Hayworth - nyckel till flykten",
    "À l'ombre de Shawshank",
    "Vykoupení z věznice Shawshank",
    "Vykúpenie z väznice Shawshank",
    "Nyckeln Till Frihet",
    "Esaretin bedeli",
    "Frihetens Regn",
    "Os Condenados de Shawshank",
    "肖申克的救赎",
    "Sueños de libertad",
    "Die Verurteilten",
    "Изкуплението Шоушенк",
    "Sueños de fuga",
    "Xiao shen ke de jiu shu",
    "Shawshanki lunastus",
    "Gaqceva shoushenkidan",
    "Τελευταία Έξοδος Ρίτα Χέϊγουόρθ",
    "Iskupljenje u Shawshanku",
    "Homot Shel Tikva",
    "Rastgari Dar Shawshank",
    "Shôshanku no sora ni",
    "Pabegimas is Sousenko",
    "Sueños de libertad",
    "De ontsnapping",
    "Frihetens regn",
    "Sueños de fuga",
    "Skazani na Shawshank",
    "Inchisoarea Ingerilor",
    "Побег из Шоушенка",
    "Nyckeln till frihet",
    "Kaznilnica odresitve",
    "Esaretin Bedeli",
    "Втеча з Шоушенка",
    "쇼생크 탈출",
    "The Shawshank Redemption - Stephen King",
  ],
  "color": "#8C634B",
  "createdAt": Any<String>,
  "genre": Array [
    "Drama",
    "Crime",
  ],
  "image": "https://image.tmdb.org/t/p/w154/9O7gLzmreU0nGkIB6K3BsJbzvNv.jpg",
  "objectID": Any<String>,
  "rating": 5,
  "score": 9.97764206054169,
  "title": "The Shawshank Redemption",
  "updatedAt": Any<String>,
  "year": 1994,
}
`;
